# ping-me

./: .prettierrc  README.md  bun.lockb  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/ui/input/: input.svelte
src/lib/types/: notify-state.ts  trigger.ts  user.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/authorized/: +page.svelte
src/routes/config/: +page.svelte
src/routes/login/: +page.svelte
